 * Deprecated Solver.getUsedFunctionEvaluation in favor of getCallsNumber
 * Deprecated TimerCallback
 * Deprecated ComposedDistribution in favor of JointDistribution
 * Deprecated ComposedCopula in favor of BlockIndependentCopula
 * Added Polygon::FillBetween static method to fill the surface between two curves

=== Documentation ===

=== Python module ===

=== Miscellaneous ===
 * UniformOverMesh left the experimental module
 * IntegrationExpansion/LeastSquaresExpansion left the experimental module

== 1.22 release (2024-01-09) == #release-1.22

=== Library ===

==== Major changes ====

==== New classes ====
 * BoundaryMesher (openturns.experimental)
 * LatentVariableModel (openturns.experimental)
 * StudentCopula (openturns.experimental)
 * StudentCopulaFactory (openturns.experimental)
 * TruncatedOverMesh (openturns.experimental)
 * SimplicialCubature (openturns.experimental)

==== API changes ====
 * Removed deprecated (Non)LinearLeastSquaresCalibration::getCandidate method
 * Removed deprecated (Non)GaussianLinearCalibration::getCandidate method
 * Removed deprecated DomainIntersection|Union|DisjunctiveUnion(Domain, Domain) ctors
 * Removed deprecated EllipticalDistribution::getInverseCorrelation method
 * Removed deprecated Basis::getDimension method
 * Removed deprecated HSICStat ctors relying on weight matrix
 * Deprecated Pagmo.setGenerationNumber for setMaximumIterationNumber
 * Deprecated NLopt.SetSeed for setSeed
 * Deprecated IterativeThresholdExceedance(dimension, threshold) ctor
 * Deprecated Linear|QuadraticLeastSquares(Sample, Function) constructor
 * Deprecated SubsetSampling.setKeepEventSample, getEventInputSample, getEventOutputSample
 * Deprecated SubsetSampling.setISubset, setBetaMin
 * QuantileMatchingFactory probabilities argument is no longer optional
 * Add a new moment order argument to MethodOfMomentsFactory
 * Removed Drawable.getPointCode
 * Deprecated LHS in favor of ProbabilitySimulationAlgorithm+LHSExperiment